[gd_scene load_steps=9 format=3 uid="uid://cjisokx4aygca"]

[ext_resource type="Script" uid="uid://deqeoryt62s56" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://cykah5xtb2f0g" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="Texture2D" uid="uid://dpb2t4nhed12w" path="res://art/developer.png" id="3_7mycd"]
[ext_resource type="PackedScene" uid="uid://ctbfecshimna4" path="res://pickup.tscn" id="3_272bh"]
[ext_resource type="PackedScene" uid="uid://cvxogfyuke111" path="res://player.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://c5jcni6ttls2w" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://c822f0tnpb0xl" path="res://game_msg.tscn" id="4_272bh"]

[sub_resource type="Curve2D" id="Curve2D_7mycd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1918, -1, 0, 0, 0, 0, 1920, 1088, 0, 0, 0, 0, 0, 1088, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
mob_scene = ExtResource("2_1bvp3")
pickup_scene = ExtResource("3_272bh")
game_msg_scene = ExtResource("4_272bh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15900984, 0.14016199, 0.49493188, 1)

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_left = -272.0
offset_top = -40.0
offset_right = 1320.0
offset_bottom = 1022.0
scale = Vector2(0.7200019, 0.7200019)
texture = ExtResource("3_7mycd")

[node name="Player" parent="." instance=ExtResource("3_lquwl")]
position = Vector2(960, 704)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PickupTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(960, 704)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_7mycd")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
rotation = -0.0005213764

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="embiggen" from="Player" to="." method="_on_player_embiggen"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="PickupTimer" to="." method="_on_pickup_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
